force-app/main/default/objects/AKA__c/AKA__c.object-meta.xml
<CustomObject>
    <label>A.K.A</label>
    <nameField>
        <label>A.K.A</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AKA</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>