force-app/main/default/objects/AKA__c/fields/aka__c.field-meta.xml
<CustomField>
    <fullName>aka__c</fullName>
    <displayFormat>a-{0}</displayFormat>
    <label>aka</label>
    <type>AutoNumber</type>
</CustomField>