force-app/main/default/objects/AKA__c/fields/AKANote__c.field-meta.xml
<CustomField>
    <fullName>AKANote__c</fullName>
    <label>Note</label>
    <length>250</length>
    <type>Text</type>
</CustomField>